r2.6.5) (robot Modifying: [[ia:Aragon]]

--- a/Aragon.mw
+++ b/Aragon.mw
@@ -6,8 +6,6 @@
 
 [[Category:Ortonamus Komunitii i' Spain]]
 
-[[kbd:Арагон]]
-
 [[an:Aragón]]
 [[ar:منطقة أراغون ذاتية الحكم]]
 [[arz:اراجون]]
@@ -43,13 +41,14 @@
 [[hr:Aragonija]]
 [[hu:Aragónia]]
 [[hy:Արագոն]]
-[[ia:Aragón]]
+[[ia:Aragon]]
 [[id:Aragon]]
 [[io:Aragono]]
 [[it:Aragona]]
 [[ja:アラゴン州]]
 [[jv:Aragon]]
 [[ka:არაგონი]]
+[[kbd:Арагон]]
 [[ko:아라곤 지방]]
 [[krc:Арагон]]
 [[kw:Aragon]]
