Deleted text with unnescecary info. "the History of the English language is very complicated" was the litteral translation. Yes I speak pitkern.

--- a/Inglish.mw
+++ b/Inglish.mw
@@ -32,7 +32,7 @@ Luv        Love<br />
 Helf!      Help!<br />
 
 Inglish es wan of de moost emportent langwijjes a'de woerlt.
-De histrei f'Inglish es kampliketet. Es arijineyts a'Inglan.
+ Es arijineyts a'Inglan.
 
 == Dem kuntrii a' Inglish mien laenghwij ==
 
