--- a/Inglish.mw
+++ b/Inglish.mw
@@ -32,7 +32,7 @@ Luv        Love<br />
 Helf!      Help!<br />
 
 Inglish es wan of de moost emportent langwijjes a'de woerlt.
- Es arijineyts a'Inglan.
+De histrei f'Inglish es kampliketet. Es arijineyts a'Inglan.
 
 == Dem kuntrii a' Inglish mien laenghwij ==
 
