--- a/Tailan.mw
+++ b/Tailan.mw
@@ -11,7 +11,7 @@ ofisial_laenghwij = |
 leadertitle1 = Head a' Stait|
 leader1 = Bhumibol Adulyadej|
 leadertitle2 = Prime Minister|
-leader2 = Abhisit Vejjajiva|
+leader2 = Yingluck Shinawatra|
 independence = |
 airea = ?|
 airea_wata = |
