*Empty MediaWiki Message*

--- a/Tan_Son_Nhat_Aeyaport.mw
+++ b/Tan_Son_Nhat_Aeyaport.mw
@@ -1,6 +1,6 @@
 [[File:Tansonnhat11.jpg|240px|thumb|right|Tan Son Nhat Airport]]
 '''Tan Son Nhat Airport''' (''Sân bay quốc tế Tân Sơn Nhất'') esa airport i' [[Ho Chi Minh City]], [[Wiyetnaam]], kuntrii i' sowth-eist Asya.
-
+[[Category:Wiyetnaam]]
 [[ace:Bandar Udara Anrarabangasa Tan Son Nhat]]
 [[af:Tan Son Nhat Internasionale Lughawe]]
 [[an:Aeropuerto de Tan Son Nhat]]
