*Empty MediaWiki Message*

--- a/Ho_Chi_Minh_City.mw
+++ b/Ho_Chi_Minh_City.mw
@@ -1,6 +1,6 @@
 [[File:DowntownSaigon1.JPG|300px|thumb|right|Ho Chi Minh City]]
 '''Ho Chi Minh City''' (''Thành phố Hồ Chí Minh'') esa city i' [[Wiyetnaam]], kuntrii i' sowth-eist Asya, neya [[Binh Duong]], [[Dong Nai]], [[Ba Ria-Vung Tau]], [[Long An]], [[Tay Ninh]].
-
+[[Category:Wiyetnaam]]
 [[ace:Kota Ho Chi Minh]]
 [[af:Ho Chi Minh-stad]]
 [[als:Ho-Chi-Minh-Stadt]]
