*Empty MediaWiki Message*

--- a/Đồng_Hới.mw
+++ b/Đồng_Hới.mw
@@ -15,8 +15,8 @@
 }}
 '''Đồng Hới''' ([[Vietnamese]]: ''Thành phố Đồng Hới'') esa toen i' Vietnam, en t' prowins o' [[Quảng Bình]], i' [[Bac Trung Bo]]. Es popyulayshun i' 103.988 a' [[2006]].
 
-[[Category:Citii i' Quang Binh prowins]]
-
+[[Category:Quang Binh prowins]]
+[[Category:Wiyetnaam]]
 [[ace:Đồng Hới]]
 [[af:Dong Hoi]]
 [[als:Dong Hoi]]
