--- a/Poelish.mw
+++ b/Poelish.mw
@@ -10,4 +10,4 @@ Rushan esa em laenghwii i' [[Poeland]]. Et es spoken most i' [[Urup]].
 
 [[Category:Laenghwij]]
 
-[[en:Polish language]
+[[en:Polish language]]
