*Empty MediaWiki Message*

--- a/Tiemsoen.mw
+++ b/Tiemsoen.mw
@@ -1,4 +1,4 @@
-[[File:Timezones_optimized.png|thumb|400px|Dem tiemsoen o' [[Erth]] a' [[2005]].]]
+[[File:Standard time zones of the world.png|thumb|400px|Dem tiemsoen o' [[Erth]] a' [[2011]].]]
 '''Tiemsoen''' esa plais a' [[Erth]] se hes standid [[tiem]], niemd ''loekil tiem''.
 
 {{stub}}
