--- a/Brij.mw
+++ b/Brij.mw
@@ -1,3 +1,4 @@
+[[File:Kingston-Rhinecliff Bridge2.JPG|thumb]]
 A '''brij''' es a' wieh t' get akros a' thing. Mani brijes kros waata, from wan said taedha. Brijes karli dem [[roed]] kros kriik an draen.
 
 ==Sii tuu==
