--- a/Poelish.mw
+++ b/Poelish.mw
@@ -1,6 +1,6 @@
-Rushan esa em laenghwii i' [[Poeland]]. Et es spoken most i' [[Urup]].
+Poelish esa em laenghwii i' [[Poeland]]. Et es spoken most i' [[Urup]].
 
-== Kuntrii a' Rushan mien laenghwij ==
+== Kuntrii a' Poelish mien laenghwij ==
 * [[Poeland]]
 
 == Taedha kuntrii a' Poelish es yuus ==
