--- a/Auramaik.mw
+++ b/Auramaik.mw
@@ -1,1 +1,7 @@
 '''Auramaik''' esa [[laenghwij]] i 't [[Midl Eist]]. Liik [[Hiibruu]] an [[Erabek]].
+
+{{stub}}
+
+[[Category:Laenghwij]]
+
+[[en:Aramaic language]]
