--- a/Libiia.mw
+++ b/Libiia.mw
@@ -2,6 +2,11 @@
 
 '''Libiia''' esa kuntrii i' [[Afreka]].
 
+
+* [http://news.nationalgeographic.com/news/2010/05/100505-fossil-water-radioactive-science-environment/ Underground "Fossil Water" Running Out]  Brian Handwerk, National Geographic, May 6, 2010.
+* [http://members.tripod.com/%7eamerican_almanac/libya.htm Libya turns on the Great Man-Made River] Marcia Merry, Printed in the Executive Intelligence Review, September 1991.
+
+
 {{stub}}
 
 {{Afreka}}
