--- a/Turkii.mw
+++ b/Turkii.mw
@@ -1,5 +1,21 @@
 '''{{PAGENAME}}''' esa kuntrii i' [[Urup]].
 
+==Gallery==
+<gallery>
+File:MustafaKemalAtaturk.jpg| Mustafa Kemal Atatürk
+File:Aya sofya.jpg|  
+File:Anitkabir.HB.jpg|  
+File:Kocatepe Mosque Ankara.jpg|  
+File:067 Etnografya.05.2006 resize.JPG| 
+File:DolmabahceMainGate.JPG| 
+File:İzmir clock tower.jpg| 
+File:Pamukkale00.JPG|  
+File:Eskişehir-Aycan.jpg|  
+File:Antalya falezler.jpg| 
+File:Alanya.jpg|  
+File:Bluemosquefront.jpg| 
+File:Diyarbakir P1050751 20080427135832.JPG| 
+</gallery>
 {{Asya}}
 {{Urup}}
 
