File moved on Commons

--- a/Palau.mw
+++ b/Palau.mw
@@ -3,7 +3,7 @@ native_name              = Beluu er a Belau|
 conventional_long_name   = Republic of Palau|
 country_name = Palau<br />|
 flag_filename = Flag of Palau.svg|
-coat_filename = Coat of arms of Palau.png|
+coat_filename = Seal of Palau.png|
 demonym_name = |
 common_name = Palau/Belau|
 motto = |
