--- a/Rilijin.mw
+++ b/Rilijin.mw
@@ -1,5 +1,5 @@
 [[File:Religious_syms.svg|thumb|Rilijin]]
-'''Rilijin''' esa ting wi' dem [[god]]. esas tetas me molan
+'''Rilijin''' esa ting wi' dem [[god]].
 
 [[Category:Rilijin]]
 
