*Empty MediaWiki Message*

--- a/Miikrobiologii.mw
+++ b/Miikrobiologii.mw
@@ -1,4 +1,4 @@
-''''Miikrobiologii''' esa [[saiens]], daa studehs [[miikroorganism]].
+'''Miikrobiologii''' esa [[saiens]], daa studehs [[miikroorganism]].
 
 {{stub}}
 [[Category:Saiens]]
