*Empty MediaWiki Message*

--- a/Miikrobiologii.mw
+++ b/Miikrobiologii.mw
@@ -4,71 +4,77 @@
 [[Category:Saiens]]
 [[Category:Miikrobiologii]]
 
-[[am:ደቂቅ ዘ አካላት]]
-[[ar:ميكروب]]
-[[ast:Microorganismu]]
-[[az:Mikroorqanizmlər]]
-[[bn:অণুজীব]]
-[[zh-min-nan:Bî-seng-bu̍t]]
-[[bs:Mikroorganizam]]
-[[bg:Микроорганизъм]]
-[[ca:Microorganisme]]
-[[cs:Mikroorganismus]]
-[[da:Mikroorganisme]]
-[[de:Mikroorganismus]]
-[[nv:Chʼosh doo yitʼínii]]
-[[et:Mikroorganismid]]
-[[el:Μικροοργανισμός]]
-[[es:Microorganismo]]
-[[eo:Mikroorganismo]]
-[[eu:Mikrobio]]
-[[fa:ریزاندامگان]]
-[[fr:Micro-organisme]]
-[[gv:Mynvioagh]]
-[[gl:Microorganismo]]
-[[ko:미생물]]
-[[hi:सूक्ष्मजीव]]
-[[hr:Mikroorganizmi]]
-[[io:Mikrobo]]
-[[id:Mikroorganisme]]
-[[is:Örvera]]
-[[it:Microrganismo]]
-[[he:מיקרואורגניזם]]
-[[kk:Микроағзалар]]
-[[ku:Hûrjînewer]]
-[[lv:Mikroorganisms]]
-[[lt:Mikroorganizmai]]
-[[ln:Mikɔlɔ́bɛ]]
-[[hu:Mikroorganizmus]]
-[[mk:Микроорганизам]]
-[[ms:Mikroorganisma]]
-[[nl:Micro-organisme]]
-[[ja:微生物]]
-[[no:Mikroorganisme]]
-[[nn:Mikroorganisme]]
-[[oc:Micròbi]]
-[[pnb:جراسیم]]
-[[pl:Mikroorganizm]]
-[[pt:Micro-organismo]]
-[[kaa:Bir kletkalı haywanlar]]
-[[ro:Microorganism]]
-[[ru:Микроорганизмы]]
-[[sah:Микроорганизм]]
-[[stq:Mikroorganismen]]
-[[simple:Germ]]
-[[sk:Mikroorganizmus]]
-[[sl:Mikroorganizem]]
-[[ckb:وردەئۆرگانیزم]]
-[[sr:Mikroorganizmi]]
-[[sh:Mikroorganizmi]]
-[[fi:Mikrobi]]
-[[sv:Mikroorganism]]
-[[ta:நுண்ணுயிர்]]
-[[th:จุลินทรีย์]]
-[[tr:Mikroorganizma]]
-[[uk:Мікроорганізми]]
-[[ur:یک خلوی جاندار]]
-[[vi:Vi sinh vật]]
-[[fiu-vro:Pisolanõ]]
-[[war:Kagaw]]
-[[zh:微生物]]
+[[af:Mikrobiologie]]
+[[ar:علم الأحياء الدقيقة]]
+[[an:Microbiolochía]]
+[[ast:Microbioloxía]]
+[[be:Мікрабіялогія]]
+[[bs:Mikrobiologija]]
+[[bg:Микробиология]]
+[[ca:Microbiologia]]
+[[cs:Mikrobiologie]]
+[[cy:Microfioleg]]
+[[da:Mikrobiologi]]
+[[de:Mikrobiologie]]
+[[et:Mikrobioloogia]]
+[[el:Μικροβιολογία]]
+[[es:Microbiología]]
+[[eo:Mikrobiologio]]
+[[eu:Mikrobiologia]]
+[[fa:میکروبیولوژی]]
+[[fo:Smáverulívfrøði]]
+[[fr:Microbiologie]]
+[[ga:Micribhitheolaíocht]]
+[[gv:Myn-vioagh-oaylleeaght]]
+[[gl:Microbioloxía]]
+[[ko:미생물학]]
+[[hi:सूक्ष्मजैविकी]]
+[[hr:Mikrobiologija]]
+[[ilo:Microbiolohia]]
+[[id:Mikrobiologi]]
+[[is:Örverufræði]]
+[[it:Microbiologia]]
+[[he:מיקרוביולוגיה]]
+[[jv:Mikrobiologi]]
+[[kn:ಸೂಕ್ಷ್ಮ ಜೀವ ವಿಜ್ಞಾನ]]
+[[kk:Микробиология]]
+[[ku:Hûrjînewerzanist]]
+[[la:Microbiologia]]
+[[lv:Mikrobioloģija]]
+[[lt:Mikrobiologija]]
+[[hu:Mikrobiológia]]
+[[mk:Микробиологија]]
+[[ml:സൂക്ഷ്മജീവശാസ്ത്രം]]
+[[ms:Mikrobiologi]]
+[[nl:Microbiologie]]
+[[new:माइक्रोबायोलोजी]]
+[[ja:微生物学]]
+[[no:Mikrobiologi]]
+[[nn:Mikrobiologi]]
+[[nov:Mikrobiologia]]
+[[oc:Microbiologia]]
+[[pl:Mikrobiologia]]
+[[pt:Microbiologia]]
+[[ro:Microbiologie]]
+[[qu:Ch'iñi kawsay yachay]]
+[[ru:Микробиология]]
+[[sq:Mikrobiologjia]]
+[[simple:Microbiology]]
+[[sk:Mikrobiológia]]
+[[sl:Mikrobiologija]]
+[[sr:Микробиологија]]
+[[sh:Mikrobiologija]]
+[[su:Mikrobiologi]]
+[[fi:Mikrobiologia]]
+[[sv:Mikrobiologi]]
+[[tl:Mikrobiyolohiya]]
+[[ta:நுண்ணுயிரியல்]]
+[[te:సూక్ష్మ జీవశాస్త్రం]]
+[[th:จุลชีววิทยา]]
+[[tr:Mikrobiyoloji]]
+[[uk:Мікробіологія]]
+[[ur:خرد حیاتیات]]
+[[vi:Vi sinh học]]
+[[wa:Bacterolodjeye]]
+[[yi:מיקראביאלאגיע]]
+[[zh:微生物学]]
