--- a/Erabek.mw
+++ b/Erabek.mw
@@ -103,7 +103,7 @@ Mani word i' [[Norfuk]] a' [[Pitkern]] a' f' Erabek, liik "shuga" a' "koton".
 [[io:Arabiana linguo]]
 [[is:Arabíska]]
 [[it:Lingua araba]]
-[[iu:ᐊᕋᕕ/aravi]]
+[[iu:ᐊᕋᕕ]]
 [[ja:アラビア語]]
 [[jv:Basa Arab]]
 [[ka:არაბული ენა]]
