r2.6.5) (Robot: Modifying [[iu:ᐃᒡᓗᕐᔪᐊᑦ ᐋᖅᑭᒃᓯᒪᓂᖏᑦ]]

--- a/Aarkitekchur.mw
+++ b/Aarkitekchur.mw
@@ -70,7 +70,7 @@ Mani tuares in [[Norfuk Ailen]] kam tu sii dem historik bildings in [[Kingston]]
 [[io:Arkitekturo]]
 [[is:Byggingarlist]]
 [[it:Architettura]]
-[[iu:ᐃᒡᓗᕐᔪᐊᑦ ᐋᖅᑭᒃᓯᒪᓂᖏᑦ/iglurjuat aaqqiksimaningit]]
+[[iu:ᐃᒡᓗᕐᔪᐊᑦ ᐋᖅᑭᒃᓯᒪᓂᖏᑦ]]
 [[ja:建築]]
 [[jv:Arsitèktur]]
 [[ka:არქიტექტურა]]
