*Empty MediaWiki Message*

--- a/Norfuk.mw
+++ b/Norfuk.mw
@@ -15,7 +15,7 @@
 |IPAChartEng=Y
 }}
 
-'''Norfuk''' esa [[laenghwij]] spoken i' [[Norfuk Ailen]], an es disended from t' [[Pitkern]] laenghwij a' t' setlars from [[Pitkern Ailen]]. Es a' miks a' oel [[Inglish]] en [[Tahityan]] laenghwij, wi' Inglish maeken mor enfluens. Mani word i' Norfuk a' f' [[Inglish]], liik "[[ailen]]" an "[[tiemsoen]]."
+'''Norfuk''' esa creole [[laenghwij]] spoken i' [[Norfuk Ailen]], an es disended from t' [[Pitkern]] laenghwij a' t' setlars from [[Pitkern Ailen]]. Es a' miks a' oel [[Inglish]] en [[Tahityan]] laenghwij, wi' Inglish maeken mor enfluens. Mani word i' Norfuk a' f' [[Inglish]], liik "[[ailen]]" an "[[tiemsoen]]."
 
 Norfuk es t' ofishol laenghwij, with Inglish, a' Norfuk Ailen sens 2005<ref>[http://www.rnzi.com/pages/news.php?op=read&id=16223 Radio New Zealand International], retreived November 30, 2009</ref>. T' orthografii dewelaped bei [[Aelis Baffett]] an Dr. [[Dohnal Liekok]] es aksepted bei t' Norfuk Ailen gawanment an ets aplekaeshan es enkriisin.
 
