--- a/Etlantic_Oshen.mw
+++ b/Etlantic_Oshen.mw
@@ -1,4 +1,5 @@
 [[File:Atlantic Ocean.png|thumb|300px|Etlantic Oshen.]]
+[[File:View from Low Beach, Nantucket MA.jpg|thumb|300px]]
 
 Ai '''Etlantic Oshen''' esa bidy o' salt wata betwiien [[Urup]], Antartica an Merika. Es sekan biges o' em oshen.
 
