*Empty MediaWiki Message*

--- a/Esrail.mw
+++ b/Esrail.mw
@@ -10,7 +10,7 @@ motto = ''none''|
 anthem = [[Hatikvah]]<br />The Hope|
 map_filename = LocationIsrael.png|
 kapitel = [[Jerusalem]]|
-ofisial_laenghwij = [[Erabek]], [[Hiibruu]]|
+ofisial_laenghwij = [[Hiibruu]]|
 leadertitle1 = Presidant|
 leader1 = [[Shimon Peres]]|
 leadertitle2 = Priim Minista|
