--- a/Tan_Son_Nhat_Aeyaport.mw
+++ b/Tan_Son_Nhat_Aeyaport.mw
@@ -5,6 +5,7 @@
 
 [[ace:Bandar Udara Anrarabangasa Tan Son Nhat]]
 [[af:Tan Son Nhat Internasionale Lughawe]]
+[[ak:Tan Son Nhat]]
 [[an:Aeropuerto de Tan Son Nhat]]
 [[ar:مطار تان سون نهات الدولي]]
 [[arz:مطار تان سون نهات الدولى]]
