Reverted edits by [[Special:Contributions/141.0.9.61|141.0.9.61]] ([[User talk:141.0.9.61|talk]]) to last revision by [[User:FoxBot|FoxBot]]

--- a/Saiens.mw
+++ b/Saiens.mw
@@ -1,4 +1,4 @@
-'''''Saiens''' es a' way t' find owt em thing. T' werd kom f' [[Leten]] ''scire'', a' miin "t' no".
+'''Saiens''' es a' way t' find owt em thing. T' werd kom f' [[Leten]] ''scire'', a' miin "t' no".
 
 {{stub}}
 
@@ -167,4 +167,3 @@
 [[zh-classical:格致]]
 [[zh-min-nan:Kho-ha̍k]]
 [[zh-yue:科學]]
-''''''''Bold text''''''[[File:Bold text]][[File:--[[Special:Contributions/141.0.9.61|141.0.9.61]] 16:45, 8 November 2011 (UTC)Example.jpg]]''''''
