*Empty MediaWiki Message*

--- a/Airiland.mw
+++ b/Airiland.mw
@@ -11,9 +11,9 @@ map_filename = Ireland Map.svg|
 kapitel = [[Dublin]]|
 ofishol_laenghwij = [[Airiish]], [[Inglish]]|
 leadertitle1 = President|
-leader1 = [[Mary McAleese]]|
-leadertitle2 = |
-leader2 = |
+leader1 = [[Michael D. Higgins]]|
+leadertitle2 = Taoiseach|
+leader2 = | [[Enda Kenny]]
 independence = [[December 6]], [[1922]]|
 airea = 70,273|
 airea_wata = 2.00|
