*Empty MediaWiki Message*

--- a/Airiland.mw
+++ b/Airiland.mw
@@ -13,7 +13,7 @@ ofishol_laenghwij = [[Airiish]], [[Inglish]]|
 leadertitle1 = President|
 leader1 = [[Michael D. Higgins]]|
 leadertitle2 = Taoiseach|
-leader2 = | [[Enda Kenny]]
+leader2 = [[Enda Kenny]]|
 independence = [[December 6]], [[1922]]|
 airea = 70,273|
 airea_wata = 2.00|
