/* Dem Adminnistrasun Diwishun */

--- a/Doichland.mw
+++ b/Doichland.mw
@@ -60,6 +60,8 @@ Doichland es kut i' 16 staits (in [[Doichland laenghwij]]):
 {{Link FA|af}}
 {{Link FA|vi}}
 
+{{Link GA|az}}
+
 [[ab:Алмантәыла]]
 [[ace:Jeureuman]]
 [[af:Duitsland]]
