--- a/Jirman.mw
+++ b/Jirman.mw
@@ -1,4 +1,4 @@
-Doichland [[laenghwij]] / Jerman esa [[laenghwij]] i' [[Doichland]]. [[Doichland]] esa country i' [[Urup]].
+'''Jerman''' or '''Doich''' (Jerman: Deutsch) esa [[laenghwij]] i' [[Doichland]]. [[Doichland]] esa country i' [[Urup]].
 
 == Kuntrii a' Doichland laenghwij mien laenghwij ==
 * [[Doichland]]
