*Empty MediaWiki Message*

--- a/Edwid_t'_Konfesar.mw
+++ b/Edwid_t'_Konfesar.mw
@@ -1,2 +1,4 @@
 [[File:Edward der Bekenner.jpg|right|thumb]]
 '''Edwid t' Konfesar''' ([[Old Inglish|Ænglisc]]: Ēadƿeard se Andettere) was kin o' [[Ingland]] f' 1042 t' 1066.  T' sun o' [[Elthred t' Unreddy]] a' [[Emma o' Noormandy]], hiwas born bitwiin 1003 a' 1005 i' [[Eslip, Oksfidshiir]], an es thort o' a' wan o' t' las [[Angla-Sakson]] kin o' Ingland.
+
+[[en:Edward the Confessor]]
