/* Taedha kuntrii a' Doichland laenghwij es yuus */

--- a/Jirman.mw
+++ b/Jirman.mw
@@ -9,6 +9,9 @@
 == Taedha kuntrii a' Doichland laenghwij es yuus ==
 * [[Luksemborg]]
 * [[Beljum]]
+* [[France]]
+* [[Denmark]]
+* [[Poeland]]
 
 [[Category:Doichland]]
 [[Category:Laenghwij]]
