Reverted edits by [[Special:Contributions/66.87.74.45|66.87.74.45]] ([[User talk:66.87.74.45|talk]]) to last revision by [[User:WikitanvirBot|WikitanvirBot]]

--- a/West_Ostrielya.mw
+++ b/West_Ostrielya.mw
@@ -1,10 +1,10 @@
-'''West Ostrielya''' esa [[stait]] i' t' west o' [[Ostrielya]]. Es kapitel c'''Bold text'''itii a' [[Pirth]]. Es biges o' em staits.
+'''West Ostrielya''' esa [[stait]] i' t' west o' [[Ostrielya]]. Es kapitel citii a' [[Pirth]]. Es biges o' em staits.
 
 [[File:Western Australia locator-MJC.png|right|thumb|270px|West Ostrielya i' Ostrielya]]
-Y
+
 {{stub}}
 
-[[Categorypornhub:Stait i' Ostrielya]]
+[[Category:Stait i' Ostrielya]]
 
 [[af:Wes-Australië]]
 [[ang:Westerne Australia]]
