The file [[:Image:Norfolk_COA.gif]] has been replaced by [[:Image:Norfolk_COA.png]] by administrator [[:commons:User:Billinghurst]]: ''superseded by an improved version''. ''[[m:User:CommonsDelinker|Translate me!]]''

--- a/Norfuk_Ailen.mw
+++ b/Norfuk_Ailen.mw
@@ -3,7 +3,7 @@ native_name              = Norfolk Island|
 conventional_long_name   = Territory of Norfolk Island|
 country_name = Norfuk Ailen<br />Territory of Norfolk Island|
 flag_filename = Flag of Norfolk Island.svg|
-coat_filename = Norfolk COA.gif|
+coat_filename =Norfolk_COA.png|
 demonym_name = Norfuk Ailen|
 common_name = Norfuk|
 motto = [[Inasmuch]]|
