*Empty MediaWiki Message*

--- a/Turkii.mw
+++ b/Turkii.mw
@@ -14,7 +14,8 @@ File:Eskişehir-Aycan.jpg|
 File:Antalya falezler.jpg| 
 File:Alanya.jpg|  
 File:Bluemosquefront.jpg| 
-File:Diyarbakir P1050751 20080427135832.JPG| 
+File:Diyarbakir P1050751 20080427135832.JPG|
+File:Flag of Turkey.svg|
 </gallery>
 {{Asya}}
 {{Urup}}
