*Empty MediaWiki Message*

--- a/Turkii.mw
+++ b/Turkii.mw
@@ -1,3 +1,4 @@
+[[File:Flag of Turkey.svg|right|125px]]
 '''{{PAGENAME}}''' esa kuntrii i' [[Urup]].
 
 == Gallery ==
@@ -15,7 +16,7 @@ File:Antalya falezler.jpg|
 File:Alanya.jpg|  
 File:Bluemosquefront.jpg| 
 File:Diyarbakir P1050751 20080427135832.JPG|
-File:Flag of Turkey.svg|
+
 </gallery>
 {{Asya}}
 {{Urup}}
