*Empty MediaWiki Message*

--- a/Esrail.mw
+++ b/Esrail.mw
@@ -8,7 +8,7 @@ conventional_long_name = Stait o' Esrail|
 common_name = Esrail|
 motto = ''none''|
 anthem = [[Hatikvah]]<br />The Hope|
-map_filename = LocationIsrael.png|
+map_filename = Israel in its region (pre 1967 territory).svg|
 kapitel = [[Jerusalem]]|
 ofisial_laenghwij = [[Hiibruu]]|
 leadertitle1 = Presidant|
