--- a/Anastacia.mw
+++ b/Anastacia.mw
@@ -1,7 +1,4 @@
-[[File:Anastacia, Women's World Awards 2009 a.jpg|thumb|right|200px]] '''Anastacia''' ([[Chicago]], [[17 settembre]] [[1968]]) is an american singer, songwriter and stylist
-== Albums == 
-* [[2000]] - ''[[Not That Kind]]'' 
-* [[2001]] - ''[[Freak of Nature]]''
-* [[2004]] - ''[[Anastacia (album)|Anastacia]]'' 
-* [[2005]] - ''[[Pieces of a Dream (album Anastacia)|Pieces of a Dream]]'' 
-* [[2008]] - ''[[Heavy Rotation]]''
+[[File:Anastacia, Women's World Awards 2009 a.jpg|thumb|right|250px]]
+'''Anastacia''' ([[Chicago]], 17.09.1968) esa singer, [[Yunitid Staits]].
+
+[[en:Anastacia]]
